--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,6 +6,7 @@
     <title>Edit Book Review</title>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/edit.css" />
+    <link rel="preload" as="image" href="images/brown-wooden-textured-flooring-background.jpg">
   </head>
   <body>
     <main>
