--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   place-items: center;
+  justify-content: space-between;
   height: 100dvh;
   max-width: 40em;
   margin: 0 auto;
