--- a/views/new.ejs
+++ b/views/new.ejs
@@ -6,6 +6,7 @@
     <title>New Book</title>
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/new.css" />
+    <link rel="preload" as="image" href="images/brown-wooden-textured-flooring-background.jpg">
   </head>
   <body>
     <main>
